force-app/main/default/objects/Financial_Data__c/Financial_Data__c.object-meta.xml
<CustomObject>
    <description>Records of different financial metrics to be tracked. Includes metrics like CPI, Unemployment, and Insurance Rates.</description>
    <label>Financial Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>