force-app/main/default/objects/Financial_Data__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>This is to capture the &apos;date&apos; which the data entry represents. Eg. If we get rice prices for Jan 2023, we&apos;ll store it in one date field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>