force-app/main/default/objects/Financial_Data__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Used for processing, providing a normalized entry index to be consumed during prediction service.</description>
    <label>Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>