force-app/main/default/objects/Financial_Data__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Adds additional level of detail behind the &apos;Type&apos; layer. Eg. if Type = CPI, sub type can be &apos;Rice Price&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub-Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>