force-app/main/default/objects/Financial_Data__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPI</fullName>
            </value>
            <value>
                <fullName>Interest Rate</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>GDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>