force-app/main/default/objects/Financial_Data__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value of the data entry</description>
    <label>Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>