force-app/main/default/objects/Financial_Data__c/recordTypes/Archived_Prediction.recordType-meta.xml
<RecordType>
    <fullName>Archived_Prediction</fullName>
    <active>true</active>
    <label>Archived Prediction</label>
</RecordType>