force-app/main/default/objects/Financial_Data__c/recordTypes/Prediction.recordType-meta.xml
<RecordType>
    <fullName>Prediction</fullName>
    <active>true</active>
    <label>Prediction</label>
</RecordType>