force-app/main/default/objects/Financial_Data__c/listViews/Main_List.listView-meta.xml
<ListView>
    <fullName>Main_List</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Value__c</columns>
    <columns>Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Main List</label>
</ListView>